--- a/kubernetes/manifests/postgresql.yml
+++ b/kubernetes/manifests/postgresql.yml
@@ -98,7 +98,7 @@ spec:
                   name: postgresql
                   key: postgres_password
             - name: POSTGRES_MULTIPLE_DATABASES
-              value: "huginn,keycloak,nextcloud,ttrss"
+              value: "huginn"
           ports:
             - name: db
               containerPort: 5432
