add homer password

--- a/kubernetes/manifests/homer.yml
+++ b/kubernetes/manifests/homer.yml
@@ -11,6 +11,25 @@ spec:
       port: 8080
   selector:
     app: homer
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: homer
+  namespace: default
+type: Opaque
+# stringData:
+#   credentials: "admin:$2y$12$8KtQ4SQb6QpebcgYvMPjwOv3Jz9ojkNq8FVWZmk5q1BW9BoEX2aAy" # admin:admin by default, bcrypted password: https://bcrypt-generator.com/
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: homer
+  namespace: default
+spec:
+  basicAuth:
+    secret: "homer"
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
@@ -28,6 +47,8 @@ spec:
       services:
         - name: homer
           port: 8080
+      middlewares:
+        - name: homer
   tls:
     secretName: wilcard-main-domain-tls
 
