add registry deletion env var

--- a/kubernetes/manifests/docker-container-registry.yml
+++ b/kubernetes/manifests/docker-container-registry.yml
@@ -40,6 +40,9 @@ spec:
             limits:
               memory: "1024Mi"
               cpu: "2.00"
+          env:
+            - name: REGISTRY_STORAGE_DELETE_ENABLED
+              value: "true"
           ports:
             - name: web
               containerPort: 5000
