always pull epic service container

--- a/kubernetes/manifests/epicgames-freegames.yml
+++ b/kubernetes/manifests/epicgames-freegames.yml
@@ -74,6 +74,7 @@ spec:
       containers:
         - name: app
           image: charlocharlie/epicgames-freegames
+          imagePullPolicy: Always
           resources:
             requests:
               memory: "64Mi"
