--- a/teardown_cluster.yml
+++ b/teardown_cluster.yml
@@ -8,5 +8,5 @@
       role: xanmanning.k3s
       vars:
         k3s_state: uninstalled
-        k3s_become_for_all: true
+        k3s_become: true
       become: true
