--- a/kubernetes/manifests/pholi-server.yml
+++ b/kubernetes/manifests/pholi-server.yml
@@ -43,6 +43,7 @@ type: Opaque
 #   jwt_verification_secret: "somecode"
 #   email_user: "somecode"
 #   email_password: "somecode"
+#   prisma_database_url: "somecode"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -87,21 +88,11 @@ spec:
                   key: jwt_verification_secret
             - name: JWT_VERIFICATION_EXPIRATION
               value: "10h"
-            - name: DB_TYPE
-              value: "postgres"
-            - name: DB_HOST
-              value: "postgresql"
-            - name: DB_PORT
-              value: "5432"
-            - name: DB_DATABASE
-              value: "pholi"
-            - name: DB_USERNAME
-              value: "postgres"
-            - name: DB_PASSWORD
+            - name: PRISMA_DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: postgresql
-                  key: postgres_password
+                  name: pholi-server
+                  key: prisma_database_url
             - name: EMAIL_CONFIRMATION_URL
               value: https://pholi.io/email/confirm
             - name: EMAIL_HOST
